finish program interface and can run

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 trek.host=localhost
 trek.port=8080
-trek.basePath=D:\\Downloads
+trek.basePath=/tmp
+trek.app=[{"name":"user_event","key":"appKey","processorClass":"com.dianping.trek.example.MobileApplogProcessor"},{"name":"testn","key":"testk"}]
