--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 			<version>1.2.14</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.0.6.Final</version>
