simplize some overdesign

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 trek.host=localhost
 trek.port=8080
 trek.basePath=/tmp
-trek.app=[{"name":"user_event","key":"appKey","processorClass":"com.dianping.trek.example.MobileApplogProcessor"},{"name":"testn","key":"testk"}]
+trek.app.json=[{"name":"user_event","key":"appKey","class":"com.dianping.trek.example.MobileApplogProcessor","flush":"true"}]
