change default parameter

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 trek.host=localhost
 trek.port=8080
 trek.basePath=/tmp
-trek.encryKey=@T#X$D%P
-trek.app.json=[{"name":"user_event_0M300ETNJA170G1M_TMDownloadSDK","key":"appKey","class":"com.dianping.trek.processor.SimpleProcessor","flush":"true"}]
+trek.encryKey=12345
+trek.app.json=[{"name":"user_event","key":"appKey","numWorker":"4","class":"com.dianping.trek.processor.SimpleProcessor","flush":"true"}]
