--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 trek.host=localhost
 trek.port=8090
 trek.basePath=/tmp
-trek.encryKey=@T#X$D%P
-trek.app.json=[{"alias":"test","logName":"user_event","key":"testkey","numWorker":"4","class":"com.dianping.trek.processor.SimpleProcessor","flush":"false","bufSize":"2048"}]
+trek.encryKey=12345
+trek.app.json=[{"alias":"test","key":"testkey","logNames":["user_event","user_event_real"],"numWorker":"4","class":"com.dianping.trek.processor.SimpleProcessor","flush":"false","bufSize":"2048"}]
